Reorganized the session detail screen for better readability. bugid: 4709

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -269,8 +269,8 @@ div.notice {
 
 div#group-by-dept {
   position: relative;
-  top: -25px;
-  margin-left: 13em;  
+  top: -22px;
+  margin-left: 14em;  
 }
 
 input.submit-button {
@@ -318,6 +318,41 @@ input.submit-button {
   border-radius: 15px;*/
 
   
+}
+
+a.register-button {
+	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9) );
+	background:-moz-linear-gradient( center top, #f9f9f9 5%, #e9e9e9 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9');
+	background-color:#f9f9f9;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	color:#333333 !important;
+	font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
+/*  font-size:15px;*/
+	font-weight:bold;
+	padding:3px 12px;
+	text-decoration:none !important;
+	text-shadow:1px 1px 0px #ffffff;
+}a.register-button:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9) );
+	background:-moz-linear-gradient( center top, #e9e9e9 5%, #f9f9f9 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9');
+	background-color:#e9e9e9;
+}a.register-button:active {
+	position:relative;
+	top:1px;
+}
+
+div.register-button {
+  margin-top: 1em;
+  margin-left: -1.5em;
 }
 
 .button-link a {
@@ -475,14 +510,31 @@ div#contents {
 
 div#contents h1 {
   margin-top: 0px;
-  font-size: 1.3em;
+  font-size: 1.5em;
   font-weight: normal;
   color: #501214;
   border-bottom-width: 2px;
-  border-bottom-style: dotted;
+  /*border-bottom-style: dotted;*/
+  border-bottom-color: #501214;
+}
+
+div#topic-details h2, div#session-details h2 {
+  padding-bottom: 2px;
+  font-size: 1em;
+  font-weight: bold;
+  border-bottom-width: 2px;
+  border-bottom-style: solid;
   border-bottom-color: #501214;
 }
   
+div#topic-details {
+  margin: 2em 0;
+}
+
+div#session-details {
+  margin-top: 1em;
+}
+
 ul#topic-list, ul#department-list {
   margin-left: 0px;
   padding-left: 0px;
@@ -744,11 +796,11 @@ span.radio-span {
 
 ul.instructor-list {
   padding-left: 0;
-  margin-top: 0.5em;
+/*  margin-top: 0.5em;*/
   margin-bottom: 0;
   list-style: none;
 }
 
 ul.instructor-list li {
-  padding-bottom: 0.5em;
+/*  padding-bottom: 0.5em;*/
 }
